hphp/test/zend/good/ext/standard/tests/image/image_type_to_mime_type_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('image_type_to_mime_type')) die('skip image_type_to_mime_type() not available');
}
