hphp/test/zend/bad/ext/gd/tests/imagefilledpolygon_basic.php.skipif
<?php 
	if (!function_exists('imagefilledpolygon')) die('skip imagefilledpolygon() not available'); 
	if (!(imagetype() & IMG_PNG)) die('skip PNG Support is not enabled');
?>